fix: selected text too hard to read
fixes #39

--- a/scss/_ctp-vars.scss
+++ b/scss/_ctp-vars.scss
@@ -45,7 +45,7 @@
   --ctp-block-highlight-color: var(--color-base-30);
 
   --ctp-selection-background-color: rgba(var(--ctp-yellow, 0.9));
-  --ctp-selection-text-color: rgb(var(--color-base-00));
+  --ctp-selection-text-color: var(--color-base-00);
 
   --ctp-page-checkbox-color: rgb(var(--ctp-accent, var(--ctp-blue)));
   --ctp-page-checkbox-border-color: var(--ctp-primary-background-color);
